--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.1.0",
     "cordova-ios": "5.0.1",
+    "cordova-plugin-telerik-imagepicker": "2.3.2",
     "core-js": "^2.5.4",
     "firebase": "^6.2.4",
     "rxjs": "~6.5.1",
@@ -72,7 +73,10 @@
       "cordova-plugin-device": {},
       "cordova-plugin-splashscreen": {},
       "cordova-plugin-ionic-webview": {},
-      "cordova-plugin-ionic-keyboard": {}
+      "cordova-plugin-ionic-keyboard": {},
+      "cordova-plugin-telerik-imagepicker": {
+        "PHOTO_LIBRARY_USAGE_DESCRIPTION": "phot"
+      }
     },
     "platforms": [
       "ios"
