--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "^7.2.2",
     "@angular/router": "^7.2.2",
     "@capacitor/core": "^1.1.1",
+    "@ionic-native/camera": "^5.13.0",
     "@ionic-native/core": "^5.0.0",
     "@ionic-native/image-picker": "^5.12.0",
     "@ionic-native/ionic-webview": "^5.12.0",
