--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@capacitor/core": "^1.1.1",
     "@ionic-native/camera": "^5.13.0",
     "@ionic-native/core": "^5.0.0",
+    "@ionic-native/file": "^5.13.0",
     "@ionic-native/image-picker": "^5.12.0",
     "@ionic-native/ionic-webview": "^5.12.0",
     "@ionic-native/splash-screen": "^5.0.0",
@@ -31,6 +32,7 @@
     "@ionic/angular": "^4.1.0",
     "cordova-browser": "6.0.0",
     "cordova-ios": "5.0.1",
+    "cordova-plugin-file": "6.0.2",
     "cordova-plugin-telerik-imagepicker": "2.3.2",
     "core-js": "^2.5.4",
     "firebase": "^6.3.4",
@@ -80,7 +82,8 @@
       "cordova-plugin-ionic-webview": {},
       "cordova-plugin-ionic-keyboard": {},
       "cordova-plugin-telerik-imagepicker": {},
-      "cordova-plugin-camera": {}
+      "cordova-plugin-camera": {},
+      "cordova-plugin-file": {}
     },
     "platforms": [
       "ios",
