--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@ionic/angular": "^4.1.0",
     "cordova-browser": "6.0.0",
     "cordova-ios": "5.0.1",
+    "cordova-plugin-camera": "^4.1.0",
     "cordova-plugin-file": "6.0.2",
     "cordova-plugin-telerik-imagepicker": "2.3.2",
     "core-js": "^2.5.4",
@@ -81,7 +82,9 @@
       "cordova-plugin-splashscreen": {},
       "cordova-plugin-ionic-webview": {},
       "cordova-plugin-ionic-keyboard": {},
-      "cordova-plugin-telerik-imagepicker": {},
+      "cordova-plugin-telerik-imagepicker": {
+        "PHOTO_LIBRARY_USAGE_DESCRIPTION": " "
+      },
       "cordova-plugin-camera": {},
       "cordova-plugin-file": {}
     },
