--- a/package.json
+++ b/package.json
@@ -28,13 +28,16 @@
     "@ionic-native/file": "^5.13.0",
     "@ionic-native/image-picker": "^5.12.0",
     "@ionic-native/ionic-webview": "^5.12.0",
+    "@ionic-native/local-notifications": "^5.16.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.1.0",
     "cordova-browser": "6.0.0",
     "cordova-ios": "5.0.1",
+    "cordova-plugin-badge": "0.8.8",
     "cordova-plugin-camera": "^4.1.0",
     "cordova-plugin-file": "6.0.2",
+    "cordova-plugin-local-notification": "0.9.0-beta.2",
     "cordova-plugin-telerik-imagepicker": "2.3.2",
     "core-js": "^2.5.4",
     "firebase": "^6.3.4",
@@ -88,7 +91,8 @@
         "PHOTO_LIBRARY_USAGE_DESCRIPTION": " "
       },
       "cordova-plugin-camera": {},
-      "cordova-plugin-file": {}
+      "cordova-plugin-file": {},
+      "cordova-plugin-local-notification": {}
     },
     "platforms": [
       "ios",
