--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "cordova-plugin-telerik-imagepicker": "2.3.2",
     "core-js": "^2.5.4",
     "firebase": "^6.3.4",
+    "hammerjs": "^2.0.8",
     "rxjs": "~6.5.1",
     "tslib": "^1.9.0",
     "web-animations-js": "^2.3.2",
